# MicroPython_BMI270

./: README.rst  examples.json  package.json  pyproject.toml
docs/: api.rst  conf.py  examples.rst  index.rst
examples/: bmi270_acceleration_operation_mode.py  bmi270_acceleration_range.py  bmi270_gyro_range.py  bmi270_simpletest.py
micropython_bmi270/: bmi270.py  config_file.py  i2c_helpers.py
